<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserProfile.ChangeNameActivity"
    android:background="@color/secondary_background">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/personal_info"
        android:textColor="@color/dark_primary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="18dp"
        android:src="@drawable/ic_toolbar_back"
        app:layout_constraintBottom_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHeader" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/your_name"
        android:textColor="@color/on_background"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/please_enter_your_profile_name"
        android:textColor="@color/on_background"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/edtInputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="85dp"
        android:backgroundTint="@color/on_background_opacity_20"
        android:gravity="center"
        android:hint="@string/input_name"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:paddingHorizontal="10dp"
        android:singleLine="true"
        android:textColor="@color/on_background"
        android:textColorHint="@color/on_background_opacity_20"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvDesc" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/bg_button_confirm_personal_info_selector"
        android:enabled="false"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/confirm"
        android:textColor="@color/thirdly_text_color"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtInputName" />

</androidx.constraintlayout.widget.ConstraintLayout>