<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_background"
    tools:context=".ui.UserProfile.ChooseGenderActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/personal_info"
        android:textColor="@color/dark_primary"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="18dp"
        android:src="@drawable/ic_toolbar_back"
        app:layout_constraintBottom_toBottomOf="@id/tvHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHeader" />
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/your_gender"
        android:textColor="@color/on_background"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/used_in_the_energy_burn_calulations"
        android:textColor="@color/on_background"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctrMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toStartOf="@id/ctrFemale"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDesc">

        <ImageView
            android:id="@+id/imgMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_male"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/male"
            android:textColor="@color/selector_color_gender"
            app:layout_constraintEnd_toEndOf="@id/imgMale"
            app:layout_constraintStart_toStartOf="@id/imgMale"
            app:layout_constraintTop_toBottomOf="@id/imgMale" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctrFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/ctrMale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/ctrMale"
        app:layout_constraintTop_toTopOf="@id/ctrMale">

        <ImageView
            android:id="@+id/imgFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_female"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/selector_color_gender"
            app:layout_constraintEnd_toEndOf="@id/imgFemale"
            app:layout_constraintStart_toStartOf="@id/imgFemale"
            app:layout_constraintTop_toBottomOf="@id/imgFemale" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/bg_button_confirm_personal_info_selector"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/confirm"
        android:textColor="@color/thirdly_text_color"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ctrMale" />

</androidx.constraintlayout.widget.ConstraintLayout>